--- a/eth-advanced/4. Wallet/package.json
+++ b/eth-advanced/4. Wallet/package.json
@@ -17,7 +17,8 @@
     "mocha": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "web3": "^4.10.0"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^2.1.15",
