--- a/poly-proof-advanced/nftcollection/.gitignore
+++ b/poly-proof-advanced/nftcollection/.gitignore
@@ -15,18 +15,18 @@
 
 # production
 /build
-
+cache
 # misc
 .DS_Store
 *.pem
-
+/artifacts
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
+/.env
 
 # vercel
 .vercel
